--- a/index.html
+++ b/index.html
@@ -7,3 +7,7 @@
 <p>but these all show up on one line</p>
 
 <p>Ew!</p>
+
+<p>You should vist my repository
+    <a>https://github.com/Ramiro3110/animated-rotary-phone</a>
+</p>
