--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
 <p>Ew!</p>
 
-<p>You should vist my repository
-    <a>https://github.com/Ramiro3110/animated-rotary-phone</a>
+<p>
+    Visit
+    <a href="https://github.com/Ramiro3110/animated-rotary-phone">
+        my repository!
+    </a>
 </p>
