--- a/index.html
+++ b/index.html
@@ -14,3 +14,12 @@
         my repository!
     </a>
 </p>
+
+This is
+<span style="color:green">
+  green
+</span>
+and this is 
+<span style="color:pink">
+  pink.
+</span>
