Fancy fonts and letters

--- a/index.html
+++ b/index.html
@@ -23,3 +23,5 @@ and this is
 <span style="color:pink">
   pink.
 </span>
+
+<p style="font-weight:bold;font-style:italic;text-decoration:underline;text-align:center;color:pink;background:green">No problem.</p>
