--- a/index.html
+++ b/index.html
@@ -24,4 +24,6 @@ and this is
   pink.
 </span>
 
+<p>This is fancy stuff like fonts</p>
+
 <p style="font-weight:bold;font-style:italic;text-decoration:underline;text-align:center;color:pink;background:green">No problem.</p>
