--- a/index.html
+++ b/index.html
@@ -27,3 +27,5 @@ and this is
 <p>This is fancy stuff like fonts</p>
 
 <p style="font-weight:bold;font-style:italic;text-decoration:underline;text-align:center;color:pink;background:green">No problem.</p>
+
+<p id="stylish">No problem</a>
