--- a/index.html
+++ b/index.html
@@ -28,4 +28,4 @@ and this is
 
 <p style="font-weight:bold;font-style:italic;text-decoration:underline;text-align:center;color:pink;background:green">No problem.</p>
 
-<p id="stylish">No problem</a>
+<p id="italic">No problem</a>
