--- a/index.html
+++ b/index.html
@@ -29,3 +29,22 @@ and this is
 <p style="font-weight:bold;font-style:italic;text-decoration:underline;text-align:center;color:pink;background:green">No problem.</p>
 
 <p id="stylish">No problem</a>
+
+    <!DOCTYPE html>
+<html>
+    <head>
+        <style>
+            #stylish {
+                font-weight: bold;
+                font-style: italic;
+                text-decoration: underline;
+                text-align: center;
+                color: pink;
+                background: green;
+            }
+        </style>
+    </head>
+    <body>
+        <p id="stylish">No problem</a>
+    </body>
+</html>
