--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@ and this is
                 font-style: italic;
                 text-decoration: underline;
                 text-align: center;
-                color: pink;
-                background: green;
+                color: rgb(10, 196, 124);
+                background: rgb(0, 0, 0);
             }
         </style>
     </head>
