--- a/index.html
+++ b/index.html
@@ -31,20 +31,12 @@ and this is
     </body>
 </html>
 
-<div id="base">
-  <div id="background">
-    <div id="spookster">
-      <div id="peepers"></div>
-      <!-- Short for booplesnoot -->
-      <div id="snoot"></div>
-      <div id="left-waggler"></div>
-      <div id="right-waggler"></div>
-    </div>
-    <div id="feets">
-      <div id="feet"></div>
-      <div id="feet"></div>
-      <div id="feet"></div>
-      <div id="feet"></div>
-    </div>
-  </div>
-</div>
+<!DOCTYPE html>
+<html>
+    <head>
+        <link rel="stylesheet" href="styles.css">
+    </head>
+    <body>
+        <p id="stylish">No problem</a>
+    </body>
+</html>
