--- a/index.html
+++ b/index.html
@@ -1,42 +1,23 @@
-
-This is
-<span style="color:green">
-  green
-</span>
-and this is 
-<span style="color:pink">
-  pink.
-</span>
-
-<p>This is fancy stuff like fonts</p>
-
-<p style="font-weight:bold;font-style:italic;text-decoration:underline;text-align:center;color:pink;background:green">No problem.</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel="stylesheet" href="styles.css">
+    <script type="text/javascript" src="script.js"></script>
+  </head>
+  <body>
+    ...
 
     <!DOCTYPE html>
 <html>
-    <head>
-        <style>
-            #stylish {
-                font-weight: bold;
-                font-style: italic;
-                text-decoration: underline;
-                text-align: center;
-                color: rgb(10, 196, 124);
-                background: rgb(0, 0, 0);
-            }
-        </style>
-    </head>
-    <body>
-        <p id="stylish">No problem</a>
-    </body>
-</html>
-
-<!DOCTYPE html>
-<html>
-    <head>
-        <link rel="stylesheet" href="styles.css">
-    </head>
-    <body>
-        <p id="stylish">No problem</a>
-    </body>
+  <head>
+    <script type="text/javascript" 
+            src="script.js">
+     </script>
+  </head>
+  <!-- 
+  The `()` means "take an action." 
+  -->
+  <body onclick="hello()">
+    Text.
+  </body>
 </html>
