--- a/eye.html
+++ b/eye.html
@@ -10,3 +10,20 @@
         </div>
     </body>
 </html>
+
+<!DOCTYPE html>
+<html>
+    <head>
+        <link rel="stylesheet" 
+              href="eye.css">
+              
+    <script type="text/javascript" 
+            src="eye.js"></script>
+    </head>
+    <body>
+        <div id="eye">
+            <div id="pupil">
+            </div>
+        </div>
+    </body>
+</html>
